hphp/test/zend/bad/ext/ldap/tests/ldap_get_entries_basic.php
<?php
require "connect.inc";

$link = ldap_connect_and_bind($host, $port, $user, $passwd, $protocol_version);
insert_dummy_data($link);

var_dump(
	ldap_get_entries(
		$link,
		ldap_search($link, "dc=my-domain,dc=com", "(o=my-domain)")
	)
);
?>
===DONE===
<?php
require "connect.inc";

$link = ldap_connect_and_bind($host, $port, $user, $passwd, $protocol_version);
remove_dummy_data($link);
?>